--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,8 @@ jobs:
           files: |
             Releases/*Setup.exe
             Releases/*.zip
-            Releases/*-${{ env.VERSION }}-*.nupkg
+            Releases/*-delta.nupkg
+            Releases/*-${{ env.VERSION }}-full.nupkg
             Releases/RELEASES
             Releases/*.json
         env:
@@ -108,6 +109,7 @@ jobs:
         with:
           name: Velopack-Assets
           path: |
-             Releases/*-${{ env.VERSION }}-*.nupkg
+             Releases/*-delta.nupkg
+             Releases/*-${{ env.VERSION }}-full.nupkg
              Releases/RELEASES
              Releases/*.json
