feat(tts): Implement Edge TTS voice provider

--- a/EasyChat/EasyChat.csproj
+++ b/EasyChat/EasyChat.csproj
@@ -117,5 +117,8 @@
         <Content Include="Lib\**">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="Assets\voices.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 </Project>
