--- a/EasyChat/EasyChat.csproj
+++ b/EasyChat/EasyChat.csproj
@@ -70,6 +70,7 @@
         <PackageReference Include="Sdcb.PaddleInference.runtime.win64.mkl" Version="3.1.0.54" />
         <PackageReference Include="Sdcb.PaddleOCR" Version="3.0.1" />
         <PackageReference Include="Sdcb.PaddleOCR.Models.Local" Version="3.0.1" />
+        <PackageReference Include="SoundFlow" Version="1.4.0" />
         <PackageReference Include="SukiUI" Version="6.0.3" />
         
         <!-- Logging -->
